[package]
name = "texas_rust_em" # Deve ser único no crates.io
version = "0.1.1"
authors = ["Mikael Menezes <mixaelmenezes@gmail.com>"]
edition = "2021"
description = "Uma biblioteca para gerenciar baralhos e cartas de texas hold'em em Rust., definindo tipos e métodos que auxiliam no uso para o jogo"
license = "MIT OR Apache-2.0" # Escolha uma licença comum
repository = "https://github.com/MikaelMenez/Texas_rust_em.git"
keywords = ["cards", "deck", "game"]
categories = ["games"]
readme = "README.md"

[dependencies]
rand = "0.10.0"
